--- a/package.json
+++ b/package.json
@@ -43,8 +43,6 @@
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "node-sass": "^4.9.0",
-    "sass-loader": "^7.1.0"
+    "eslint-plugin-vue": "^5.0.0"
   }
 }
